[package]
name = "advent_of_code_2020"
version = "0.1.0"
authors = ["dblinn <david.blinn@turbonomic.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ['blocking', 'gzip'] }
parse-display = "0.4.0"
itertools = "0.9.0"